# wilgpio

./: .gitignore  LICENSE.md  README.md  pyproject.toml  readme.md
.github/workflows/: publish-to-pypi.yml
wilgpio/: __init__.py  gpio_listener.py  wiegand_reader.py  wiegand_writer.py
