[project]
name = "wilgpio"
version = "0.2.0"
description = "Wiegand protocol library for Raspberry Pi / Orange Pi using lgpio"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Danil"}
]

keywords = ["wiegand", "rfid", "access-control", "gpio", "lgpio", "orangepi"]

dependencies = [
    "lgpio>=0.2.0",
]

[project.urls]
"Homepage" = "https://github.com/Peim0n/wilgpio"
"Bug Tracker" = "https://github.com/Peim0n/wilgpio/issues"

# Настройка пакетов
[tool.setuptools.packages.find]
where = ["."]
include = ["wilgpio*"]

[tool.setuptools]
include-package-data = true
