[project]
name = "wilgpio"
version = "0.2.0"
description = "Wiegand protocol library for Raspberry Pi / Orange Pi using lgpio"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Peimon"}
]

keywords = ["wiegand", "rfid", "access-control", "gpio", "lgpio", "orangepi"]

dependencies = [
    "lgpio>=0.2.0",
]

license = "MIT"

license-files = ["LICENSE*"]



[project.urls]
"Homepage" = "https://github.com/Peim0n/wilgpio"
"Bug Tracker" = "https://github.com/Peim0n/wilgpio/issues"
"Repository" = "https://github.com/Peim0n/wilgpio.git"

# Настройка пакетов
[tool.setuptools.packages.find]
where = ["."]
include = ["wilgpio*"]

[tool.setuptools]
include-package-data = true
long_description = "README.md"
long_description_content_type = "text/markdown"
